--- a/GauchitoInterface/centralmonitoramento.ui
+++ b/GauchitoInterface/centralmonitoramento.ui
@@ -78,6 +78,36 @@
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
+       <widget class="QListWidget" name="printabuffer">
+        <property name="geometry">
+         <rect>
+          <x>60</x>
+          <y>10</y>
+          <width>171</width>
+          <height>221</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QLabel" name="labelTeste">
+        <property name="geometry">
+         <rect>
+          <x>270</x>
+          <y>20</y>
+          <width>341</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>TESTE</string>
+        </property>
+       </widget>
       </widget>
      </widget>
      <widget class="QLabel" name="labelLatitudeAtual">
@@ -177,6 +207,19 @@
       </property>
       <property name="text">
        <string>-</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="conectarbuffer">
+      <property name="geometry">
+       <rect>
+        <x>660</x>
+        <y>70</y>
+        <width>85</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Conectar</string>
       </property>
      </widget>
     </widget>
