--- a/GauchitoInterface/centralmonitoramento.ui
+++ b/GauchitoInterface/centralmonitoramento.ui
@@ -23,7 +23,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="tabGPS">
     <attribute name="title">
@@ -78,84 +78,14 @@
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
-       <widget class="QLabel" name="labelTeste1">
+       <widget class="QListWidget" name="labelTeste0">
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>10</y>
-          <width>671</width>
-          <height>21</height>
+          <y>0</y>
+          <width>691</width>
+          <height>231</height>
          </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>8</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>TESTE</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="labelTeste2">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>40</y>
-          <width>671</width>
-          <height>21</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>8</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>TESTE</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="labelTeste3">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>70</y>
-          <width>671</width>
-          <height>21</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>8</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>TESTE</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="labelTeste4">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>100</y>
-          <width>671</width>
-          <height>21</height>
-         </rect>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>8</pointsize>
-          <weight>75</weight>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>TESTE</string>
         </property>
        </widget>
       </widget>
@@ -270,6 +200,26 @@
       </property>
       <property name="text">
        <string>Conectar</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="labelTeste1">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>90</y>
+        <width>671</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>TESTE</string>
       </property>
      </widget>
     </widget>
@@ -678,7 +628,7 @@
      <widget class="QLabel" name="labelDIstUScm_2">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>170</x>
         <y>130</y>
         <width>59</width>
         <height>17</height>
@@ -728,12 +678,52 @@
        <string>-</string>
       </property>
      </widget>
-     <widget class="QLabel" name="labelDadosSonarDistancia">
+     <widget class="QLabel" name="labelDIstUScm_4">
       <property name="geometry">
        <rect>
-        <x>50</x>
-        <y>120</y>
-        <width>211</width>
+        <x>170</x>
+        <y>160</y>
+        <width>59</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>12</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>pol</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="labelDadosSonarDistanciaCm">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>130</y>
+        <width>101</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>20</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>-</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="labelDadosSonarDistanciaPl">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>160</y>
+        <width>101</width>
         <height>21</height>
        </rect>
       </property>
@@ -1243,7 +1233,7 @@
      <widget class="QLabel" name="labelDIstUScm">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>160</x>
         <y>130</y>
         <width>59</width>
         <height>17</height>
@@ -1293,30 +1283,10 @@
        <string>-</string>
       </property>
      </widget>
-     <widget class="QLabel" name="labelDadosUSDistCm">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>120</y>
-        <width>101</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>20</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string>-</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="labelDIstUScm_3">
       <property name="geometry">
        <rect>
-        <x>270</x>
+        <x>160</x>
         <y>160</y>
         <width>59</width>
         <height>17</height>
@@ -1333,12 +1303,32 @@
        <string>pol</string>
       </property>
      </widget>
-     <widget class="QLabel" name="labelDadosUSDistPol">
+     <widget class="QLabel" name="labelDadosUSDistanciaCm">
       <property name="geometry">
        <rect>
         <x>50</x>
-        <y>150</y>
-        <width>101</width>
+        <y>130</y>
+        <width>61</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>20</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>-</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="labelDadosUSDistanciaPl">
+      <property name="geometry">
+       <rect>
+        <x>50</x>
+        <y>160</y>
+        <width>61</width>
         <height>21</height>
        </rect>
       </property>
